# nunchaku-chroma

./: .gitignore  README.md  build_wheels.py  install.py  manual_install.py  nunchaku_chroma_versions.json  pyproject.toml
.github/workflows/: build-wheels.yml  publish.yml
chroma_files/lora/chroma/: __init__.py  compose.py  diffusers_converter.py  nunchaku_converter.py
chroma_files/models/transformers/: transformer_chroma.py
nunchaku_chroma/: __init__.py  patcher.py  transformer_chroma.py
nunchaku_chroma/comfyui/: __init__.py  loader.py  lora.py  wrapper.py
nunchaku_chroma/lora/: __init__.py  compose.py  diffusers_converter.py  nunchaku_converter.py
