[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nunchaku-chroma"
version = "0.1.0"
description = "Adds Chroma model support to Nunchaku for fast 4-bit quantized inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Steven"}
]
keywords = ["nunchaku", "chroma", "flux", "diffusion", "quantization", "4-bit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "diffusers>=0.32.0",
    "einops",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/your-username/nunchaku-chroma"
Repository = "https://github.com/your-username/nunchaku-chroma"

[project.scripts]
nunchaku-chroma-patch = "nunchaku_chroma.patcher:main"

[tool.setuptools.packages.find]
include = ["nunchaku_chroma*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
