[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nunchaku-chroma"
version = "0.1.3"
description = "Chroma model support for Nunchaku - quantized inference for diffusion models"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "spooknik"}
]
keywords = ["nunchaku", "chroma", "diffusion", "quantization", "comfyui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "nunchaku",
    "torch>=2.0",
    "diffusers>=0.32.0",
    "einops",
    "safetensors",
    "huggingface-hub",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/spooknik/nunchaku-chroma"
Repository = "https://github.com/spooknik/nunchaku-chroma"
Issues = "https://github.com/spooknik/nunchaku-chroma/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nunchaku_chroma*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"
